--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,8 @@
   <i class="icon icon-x-circle btn-mobile-close__icon hidden"></i>
 </span>
 
-<header class="panel-cover" style="background-image: url({{ site.baseurl }}/images/cover.jpg)">
+<!-- <header class="panel-cover" style="background-image: url({{ site.baseurl }}/images/cover.jpg)"> -->
+<header class="panel-cover">
   <div class="panel-main">
 
     <div class="panel-main__inner panel-inverted">
@@ -68,12 +69,12 @@
             {% endif %}
 
             <!-- RSS -->
-            <li class="navigation__item">
+            <!-- <li class="navigation__item">
               <a href="{{ site.baseurl }}/feed.xml" title="Subscribe" target="_blank">
                 <i class="icon icon-rss"></i>
                 <span class="label">RSS</span>
               </a>
-            </li>
+            </li> -->
 
             </ul>
           </nav>
