--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
           <!--Blog btn-->
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
-              <li class="navigation__item"><a href="{{ site.baseurl }}/#blog" title="link to {{ site.title }} blog" class="blog-button"><i class="icon icon-pencil"></i> Blog</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/#blog" title="link to {{ site.title }} blog" class="big-button"><i class="icon icon-pencil"></i> Blog</a></li>
             </ul>
           </nav>
           <!--Social Bttns-->
@@ -82,7 +82,7 @@
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
               <li class="navigation__item">
-                <a href="{{ site.baseurl }}/#projects" title="Projects by {{ site.title.author }}" class="project-button">
+                <a href="{{ site.baseurl }}/#projects" title="Projects by {{ site.title.author }}" class="big-button">
                   <i class="icon icon-monitor"></i> Projects</a>
               </li>
             </ul>
