--- a/_sass/uno.scss
+++ b/_sass/uno.scss
@@ -280,14 +280,16 @@ pre {
 
 .footer {
 	display: block;
-	padding: 2em 0 0 0;
+	padding: 0.5em 0 0 0;
 	border-top: 2px solid #dddddd;
 	font-size: .7em;
 	color: #b3b3b3; }
 
 .footer__copyright {
 	display: block;
-	margin-bottom: .7em; }
+	margin-bottom: .7em; 
+	margin-left: .7em; 
+}
 	.footer__copyright a {
 		color: #a6a6a6;
 		text-decoration: underline; }
@@ -563,7 +565,8 @@ nav {
 			opacity: 1; }
 
 .navigation--social {
-	margin-left: 1.5em; }
+	margin-left: 1.5em; 
+	margin-right: 1.5em; }
 	.navigation--social a {
 		padding: 6px 8px 6px 9px; }
 		.navigation--social a .label {
@@ -753,7 +756,9 @@ input[type="tel"] {
 
 	.navigation--social {
 		margin-top: 5px;
-		margin-left: 0; } 
+		margin-left: 0;
+		margin-right: 0;
+	 } 
 }
 
 @media all and (max-width: 960px) {
