--- a/css/main.scss
+++ b/css/main.scss
@@ -46,14 +46,15 @@ pre.highlight code,
 }
 
 .footer__copyright {
-    margin: 0 20px 10px;
+    margin: 0 0.2em;
+    text-align: right;
 }
 
 .user-image {
   margin-bottom: 1.2em;
   position: relative;
-  width: 100px;
-  height: 100px;
-  border: 3px solid #fff;
+  width: 30%;
+  height: 30%;
+  border: 3px double #fff;
   border-radius:100%;
 }
