--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,6 @@
 ---
 ---
-@import "uno";
+@import "uknow";
 @import "tables";
 @import "monokai";
 
@@ -16,17 +16,6 @@ pre.highlight code,
   white-space: pre-wrap;
 }
 
-.btn,
-.navigation__item a {
-  margin: 5px 0;
-  white-space: nowrap;
-}
-
-.pagination__page-number {
-  display: inline-block;
-  padding: 10px;
-}
-
 .categories a,
 .tags a {
   border: 1px solid #e25440;
@@ -38,16 +27,6 @@ pre.highlight code,
   padding: 5px 10px;
   text-shadow: none;
   white-space: nowrap;
-}
-
-.post-meta__tags {
-  font-size: 12px;
-  padding: 0 5px;
-}
-
-.footer__copyright {
-    margin: 0 0.2em;
-    text-align: right;
 }
 
 .user-image {
