--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,14 +21,13 @@
           <!--Blog btn-->
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
-              <li class="navigation__item"><a href="{{ site.baseurl }}/#blog" title="link to {{ site.title }} blog" class="big-button"><i class="icon icon-pencil"></i> Blog</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/#blog" title="link to {{ site.title }} blog" class="blog-btn"><i class="icon icon-pencil"></i> Blog</a></li>
             </ul>
           </nav>
           <!--Social Bttns-->
           <nav class="cover-navigation navigation--social">
             <ul class="navigation">
 
-            {% if site.author.twitter_username %}
               <!-- Twitter -->
               <li class="navigation__item">
                 <a href="http://twitter.com/{{ site.author.twitter_username }}" title="@{{ site.author.twitter_username }} on Twitter" target="_blank">
@@ -36,9 +35,7 @@
                   <span class="label">Twitter</span>
                 </a>
               </li>
-            {% endif %}
 
-            {% if site.author.linkedin_username %}
               <!-- LinkedIn -->
               <li class="navigation__item">
                 <a href="https://www.linkedin.com/in/{{ site.author.linkedin_username }}" title="{{ site.author.linkedin_username }} on LinkedIn" target="_blank">
@@ -46,9 +43,7 @@
                   <span class="label">LinkedIn</span>
                 </a>
               </li>
-            {% endif %}
 
-            {% if site.author.github_username %}
               <!-- GitHub -->
               <li class="navigation__item">
                 <a href="https://www.github.com/{{ site.author.github_username }}" title="{{ site.author.github_username }} on GitHub" target="_blank">
@@ -56,9 +51,7 @@
                   <span class="label">GitHub</span>
                 </a>
               </li>
-            {% endif %}
 
-            {% if site.author.email %}
               <!-- Email -->
               <li class="navigation__item">
                 <a href="mailto:{{ site.author.email }}" title="Email {{ site.author.email }}" target="_blank">
@@ -66,15 +59,6 @@
                   <span class="label">Email</span>
                 </a>
               </li>
-            {% endif %}
-
-            <!-- RSS -->
-            <!-- <li class="navigation__item">
-              <a href="{{ site.baseurl }}/feed.xml" title="Subscribe" target="_blank">
-                <i class="icon icon-rss"></i>
-                <span class="label">RSS</span>
-              </a>
-            </li> -->
 
             </ul>
           </nav>
@@ -82,7 +66,7 @@
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
               <li class="navigation__item">
-                <a href="{{ site.baseurl }}/#projects" title="Projects by {{ site.title.author }}" class="big-button">
+                <a href="{{ site.baseurl }}/#projects" title="Projects by {{ site.title.author }}" class="project-btn">
                   <i class="icon icon-monitor"></i> Projects</a>
               </li>
             </ul>
