--- a/_sass/uknow.scss
+++ b/_sass/uknow.scss
@@ -1,11 +1,9 @@
-/* Jekyll U-know theme by @r-i-c-h based on the Uno theme. */
+/* Jekyll U-know theme by @r-i-c-h based on the Uno Jekylltheme. */
 
 @import 'https://fonts.googleapis.com/css?family=Raleway:400,700|Roboto+Slab:300,400)';
-/* http://meyerweb.com/eric/tools/css/reset/
-	 v2.0 | 20110126
-	 License: none (public domain)
-*/
 @import "animate";
+
+/* http://meyerweb.com/eric/tools/css/reset/ | v2.0 | 20110126 | License: none (public domain) */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 	margin: 0;
 	padding: 0;
@@ -13,7 +11,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline; }
-
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block; }
@@ -23,7 +20,6 @@ body {
 
 ol, ul {
 	list-style: none; }
-
 blockquote, q {
 	quotes: none; }
 
@@ -38,21 +34,34 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0; }
-
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+html, body {
+	height: 100%; }
+html {
+	max-height: 100%; }
 body {
 	width: 100%;
-	*zoom: 1; }
+	*zoom: 1;
+	font-family: "Raleway", sans-serif;
+	font-size: 1em;
+	color: #666666; }
 	body:before, body:after {
 		content: "";
 		display: table; }
 	body:after {
 		clear: both; }
 
-/*
- * Foundation Icons v 3.0
+::selection {
+	background: #fae3df;
+}
+
+::-moz-selection {
+	background: #fae3df;
+}
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+/* Foundation Icons v 3.0
  * Made by ZURB 2013 http://zurb.com/playground/foundation-icon-fonts-3
- * MIT License
- */
+ * MIT License */
 @font-face {
 	font-family: "foundation-icons";
 	src: url("../fonts/foundation-icons/foundation-icons.eot");
@@ -86,23 +95,7 @@ body {
 .icon-x-circle:before { content: "\f216"; }
 .icon-x:before { content: "\f217"; }
 
-html, body {
-	height: 100%; }
-
-html {
-	height: 100%;
-	max-height: 100%; }
-
-body {
-	font-family: "Raleway", sans-serif;
-	font-size: 1em;
-	color: #666666; }
-
-::selection {
-	background: #fae3df; }
-
-::-moz-selection {
-	background: #fae3df; }
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
 a {
 	text-decoration: none;
@@ -197,9 +190,6 @@ code {
 
 pre {
 	margin-bottom: 1.3em;
-	/* padding: 1em 2.5%;
-	background: #e8f2fb;
-	border: 1px solid #c9e1f6; */
 	border-radius: 3px;
 	font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
 	font-size: .9em;
@@ -240,12 +230,10 @@ pre {
 
 .block-heading {
 	display: inline;
-/* 
-	With 'disp:inline' the following have no effect:
-	float, width, height, margin-top, margin bottom. 
-*/
-	/* float: left; */
-	/* width: 940px; */
+	/* With 'display:inline' the following have no effect:
+	 * float, width, height, margin-top, margin bottom. */
+	/* Original>> float: left; */
+	/* Original>> width: 940px; */
 	margin: 0 10px;
 	position: relative;
 	bottom: -15px;
@@ -282,18 +270,17 @@ pre {
 
 .footer {
 	display: block;
-	padding: 0.5em 0 0 0;
+	padding: 0.5em 0 0 0; 
 	border-top: 2px solid #dddddd;
 	font-size: .7em;
 	color: #b3b3b3; }
-
+	
 .footer__copyright {
 	display: block;
-/* 	margin-bottom: .7em; 
-  margin-left: .7em; */
-  margin: 0 0.2em;
-  text-align: right;
-}
+	/* margin-bottom: .7em; <<== uno.scss */
+	/* margin: 0 20px 10px 20px; <<== original main.scss */
+	/* MINE: \/\/\/\/ */
+	margin: 0 0.2em;  }
 	.footer__copyright a {
 		color: #a6a6a6;
 		text-decoration: underline; }
@@ -329,10 +316,9 @@ hr {
 	margin-right: .5em; }
 
 .post-meta__tags {
-  margin-left: .4em; 
-  font-size: 12px;
-  padding: 0 5px;
-}
+  margin-left: .4em;
+	font-size: 12px;
+  padding: 0 5px; }
 
 .post-meta__author {
 	margin-left: 1.5em; }
@@ -396,7 +382,8 @@ hr {
 	background-size: cover; }
 
 .panel-cover--collapsed {
-	width: 40%;
+	/* width: 40%; */
+	width: 30%;
 	max-width: 530px; }
 
 .panel-cover--overlay {
@@ -488,7 +475,10 @@ hr {
 .cover-disabled {
 	background: none; }
 
-.btn, .navigation__item a {
+.btn, 
+.navigation__item a {
+	margin: 5px 0;
+  white-space: nowrap;
 	padding: 10px 20px;
 	border: 1px solid #e25440;
 	border-radius: 20px;
@@ -573,6 +563,7 @@ nav {
 
 .navigation--social {
 	margin-left: 1.5em; 
+	/* ADDED RIGHT MARGIN */
 	margin-right: 1.5em; }
 	.navigation--social a {
 		padding: 6px 8px 6px 9px; }
@@ -743,11 +734,14 @@ input[type="tel"] {
 	input[type="tel"]:-ms-input-placeholder {
 		color: #cccccc; }
 
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
 @media all and (min-width: 1300px) {
 	.content-wrapper {
-		margin-left: 530px; 
-	} 
+		margin-left: 530px; } 
 }
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
 @media all and (max-width: 1100px) {
 	.panel-cover__logo {
@@ -766,10 +760,11 @@ input[type="tel"] {
 	.navigation--social {
 		margin-top: 5px;
 		margin-left: 0;
-		margin-right: 0;
-	 } 
+		/* ADDED RIGHT MARGIN */
+		margin-right: 0; } 
 }
 
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 @media all and (max-width: 960px) {
 	.btn-mobile-menu {
 		display: block; }
@@ -827,7 +822,11 @@ input[type="tel"] {
 		background: rgba(51, 51, 51, 0.98);
 		border-bottom: 1px solid rgba(255, 255, 255, 0.15); }
 		.navigation-wrapper.visible {
-			display: block; }
+			display: grid; /* CHANGE disp:block to GRID */
+			grid-template-columns: auto;
+			grid-template-rows: 1fr 2fr 1fr;
+			align-items: center;
+		}
 
 	.cover-navigation {
 		display: block;
@@ -860,7 +859,7 @@ input[type="tel"] {
 		width: 100%;
 		margin: 0 0 .4em 0; } 
 }
-
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 @media all and (max-width: 340px) {
 	.panel-main__inner {
 		padding: 0 5%; }
@@ -872,9 +871,8 @@ input[type="tel"] {
 	.panel-subtitle {
 		font-size: .9em; }
 
-	.btn, .navigation__item a {
+	.btn, 
+	.navigation__item a {
     display: block;
-    margin: 5px 0;
-    white-space: nowrap;
 		margin-bottom: .4em; } 
 }
