--- a/css/main.scss
+++ b/css/main.scss
@@ -4,7 +4,7 @@
 @import "tables";
 @import "monokai";
 
-/* Modifications */
+/* Jekyll Modifications */
 
 pre.highlight,
 .highlight pre {
@@ -14,6 +14,12 @@ pre.highlight,
 pre.highlight code,
 .highlight pre code {
   white-space: pre-wrap;
+}
+
+.btn,
+.navigation__item a {
+  margin: 5px 0;
+  white-space: nowrap;
 }
 
 .categories a,
@@ -32,8 +38,8 @@ pre.highlight code,
 .user-image {
   margin-bottom: 1.2em;
   position: relative;
-  width: 30%;
-  height: 30%;
+  width: 40%; /* ORIGINAL 100px */
+  height: 40%; /* ORIGINAL 100px */
   border: 3px double #fff;
   border-radius:100%;
 }
