Cleans CSS cruft, txtchange, CSSfix

--- a/css/main.scss
+++ b/css/main.scss
@@ -38,8 +38,8 @@ pre.highlight code,
 .user-image {
   margin-bottom: 1.2em;
   position: relative;
-  width: 40%; /* ORIGINAL 100px */
-  height: 40%; /* ORIGINAL 100px */
+  width: 10rem; /* ORIGINAL 100px */
+  height: 10rem; /* ORIGINAL 100px */
   border: 3px double #fff;
   border-radius:100%;
 }
