--- a/_sass/uknow.scss
+++ b/_sass/uknow.scss
@@ -88,6 +88,7 @@ body {
 .icon-monitor:before { content: "\f179"; }
 .icon-pencil:before { content: "\f194"; }
 .icon-rss:before { content: "\f1aa"; }
+.icon-social-facebook:before { content: "\f1c4"; }
 .icon-social-github:before { content: "\f1c9"; }
 .icon-social-linkedin:before { content: "\f1d0"; }
 .icon-social-twitter:before { content: "\f1e4"; }
@@ -451,26 +452,6 @@ hr {
 
 .cover-navigation--social {
 	margin-left: 30px; }
-
-.cover-green {
-	background-color: rgba(21, 111, 120, 0.6);
-	background-image: -webkit-linear-gradient(-410deg, rgba(21, 111, 120, 0.6) 20%, rgba(6, 31, 33, 0.8));
-	background-image: linear-gradient(140deg,rgba(21, 111, 120, 0.6) 20%, rgba(6, 31, 33, 0.8)); }
-
-.cover-purple {
-	background-color: rgba(73, 50, 82, 0.6);
-	background-image: -webkit-linear-gradient(-410deg, rgba(73, 50, 82, 0.6) 20%, rgba(17, 11, 19, 0.8));
-	background-image: linear-gradient(140deg,rgba(73, 50, 82, 0.6) 20%, rgba(17, 11, 19, 0.8)); }
-
-.cover-red {
-	background-color: rgba(119, 31, 18, 0.6);
-	background-image: -webkit-linear-gradient(-410deg, rgba(119, 31, 18, 0.6) 20%, rgba(30, 8, 5, 0.8));
-	background-image: linear-gradient(140deg,rgba(119, 31, 18, 0.6) 20%, rgba(30, 8, 5, 0.8)); }
-
-.cover-slate {
-	background-color: rgba(61, 66, 96, 0.6);
-	background-image: -webkit-linear-gradient(-410deg, rgba(61, 66, 96, 0.6) 20%, rgba(21, 23, 34, 0.8));
-	background-image: linear-gradient(140deg,rgba(61, 66, 96, 0.6) 20%, rgba(21, 23, 34, 0.8)); }
 
 .cover-disabled {
 	background: none; }
