--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,15 +19,19 @@
 <!-- Nav -->
         <div class="navigation-wrapper">
           <!--Blog btn-->
-          <nav class="cover-navigation cover-navigation--primary">
+          <nav class="cover-navigation">
             <ul class="navigation">
-              <li class="navigation__item"><a href="{{ site.baseurl }}/#blog" title="link to {{ site.title }} blog" class="blog-btn"><i class="icon icon-pencil"></i> Blog</a></li>
+              <li class="navigation__item">
+                <a href="{{ site.baseurl }}/#blog" title="link to {{ site.title }} blog" class="blog-button" id="blogbutton"><i class="icon icon-pencil"></i> Blog</a>
+              </li>
             </ul>
           </nav>
+          
           <!--Social Bttns-->
           <nav class="cover-navigation navigation--social">
             <ul class="navigation">
 
+            {% if site.author.twitter_username %}
               <!-- Twitter -->
               <li class="navigation__item">
                 <a href="http://twitter.com/{{ site.author.twitter_username }}" title="@{{ site.author.twitter_username }} on Twitter" target="_blank">
@@ -35,7 +39,19 @@
                   <span class="label">Twitter</span>
                 </a>
               </li>
+            {% endif %}
 
+            {% if site.author.facebook_username %}
+              <!-- Facebook -->
+              <li class="navigation__item">
+                <a href="http://fb.me/{{ site.author.facebook_username }}" title="{{ site.author.facebook_username }} on Facebook" target="_blank">
+                  <i class="icon icon-social-facebook"></i>
+                  <span class="label">Facebook</span>
+                </a>
+              </li>
+            {% endif %}
+
+            {% if site.author.linkedin_username %}
               <!-- LinkedIn -->
               <li class="navigation__item">
                 <a href="https://www.linkedin.com/in/{{ site.author.linkedin_username }}" title="{{ site.author.linkedin_username }} on LinkedIn" target="_blank">
@@ -43,7 +59,9 @@
                   <span class="label">LinkedIn</span>
                 </a>
               </li>
+            {% endif %}
 
+            {% if site.author.github_username %}
               <!-- GitHub -->
               <li class="navigation__item">
                 <a href="https://www.github.com/{{ site.author.github_username }}" title="{{ site.author.github_username }} on GitHub" target="_blank">
@@ -51,7 +69,9 @@
                   <span class="label">GitHub</span>
                 </a>
               </li>
+            {% endif %}
 
+            {% if site.author.email %}
               <!-- Email -->
               <li class="navigation__item">
                 <a href="mailto:{{ site.author.email }}" title="Email {{ site.author.email }}" target="_blank">
@@ -59,15 +79,15 @@
                   <span class="label">Email</span>
                 </a>
               </li>
-
+            {% endif %}
             </ul>
           </nav>
+
           <!--Projects Btn-->
-          <nav class="cover-navigation cover-navigation--primary">
+          <nav class="cover-navigation">
             <ul class="navigation">
               <li class="navigation__item">
-                <a href="{{ site.baseurl }}/#projects" title="Projects by {{ site.title.author }}" class="project-btn">
-                  <i class="icon icon-monitor"></i> Projects</a>
+                <a href="{{ site.baseurl }}" title="link to some projects by {{ site.author.name }}" class="blog-button" id="projbutton"><i class="icon icon-wrench"></i> Projects</a>
               </li>
             </ul>
           </nav>
