Adds button:hover color inversion transition, +CSStweaks

--- a/css/main.scss
+++ b/css/main.scss
@@ -40,6 +40,6 @@ pre.highlight code,
   position: relative;
   width: 10rem; /* ORIGINAL 100px */
   height: 10rem; /* ORIGINAL 100px */
-  border: 3px double #fff;
+  border: 3px double #eeeeee;
   border-radius:100%;
 }
