--- a/_sass/uknow.scss
+++ b/_sass/uknow.scss
@@ -37,6 +37,7 @@ table {
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 html, body {
 	height: 100%; }
+
 html {
 	max-height: 100%; }
 body {
@@ -103,11 +104,11 @@ a {
 	color: #e25440; }
 	a:hover {
 		color: #b9301c;
-		transition: .5s;
-		-o-transition: .5s;
-		-ms-transition: .5s;
-		-moz-transition: .5s;
-		-webkit-transition: .5s; }
+		transition: .3s;
+		-o-transition: .3s;
+		-ms-transition: .3s;
+		-moz-transition: .3s;
+		-webkit-transition: .3s; }
 
 h1,
 h2,
@@ -252,6 +253,8 @@ pre {
 	border-radius: 3px;
 	text-align: center;
 	color: #FFF; }
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
 .container {
 	position: relative;
@@ -291,7 +294,7 @@ pre {
 .avatar,
 .logo {
 	border-radius: 50%;
-	border: 3px solid #FFF;
+	border: 3px solid #eeeeee;
 	box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.3); }
 
 hr {
@@ -361,7 +364,7 @@ hr {
 	margin: 0 0 5px 0;
 	font-size: 2.5em;
 	letter-spacing: 4px;
-	color: #FFF; }
+	color: #f0f0f0; }
 
 .panel-subtitle {
 	font-family: "Roboto Slab", serif;
@@ -379,7 +382,7 @@ hr {
 	max-width: none;
 	height: 100%;
 	/* background: url(../images/background-cover.jpg) top left no-repeat #666666; */
-	background: top left no-repeat #666666;
+	background: #666666;
 	background-size: cover; }
 
 .panel-cover--collapsed {
@@ -411,7 +414,7 @@ hr {
 	border-top: 1px solid rgba(255, 255, 255, 0.14); }
 
 .panel-cover__divider--secondary {
-	width: 15%; }
+	width: 25%; }
 
 .panel-main {
 	display: table;
@@ -419,7 +422,7 @@ hr {
 	height: 100%; }
 
 .no-js .panel-main {
-	width: 40%;
+	width: 30%;
 	max-width: 530px; }
 
 .panel-main__inner {
@@ -427,10 +430,10 @@ hr {
 	vertical-align: middle;
 	position: relative;
 	z-index: 800;
-	padding: 0 60px; }
+	padding: 0 3rem; }
 
 .panel-main__content {
-	max-width: 620px;
+	max-width: 30rem;
 	margin: 0 auto; }
 
 .panel-main__content--fixed {
@@ -442,16 +445,17 @@ hr {
 .panel-inverted {
 	font-weight: 100;
 	text-align: center;
-	color: #FFF;
+	color: #f0f0f0;
 	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.4); }
 	.panel-inverted a {
-		color: #FFF; }
+		color: #f0f0f0; }
 
 .cover-navigation {
 	margin-top: 10px; }
 
 .cover-navigation--social {
-	margin-left: 30px; }
+	margin-left: 30px;
+	margin-right: 30px; }
 
 .cover-disabled {
 	background: none; }
@@ -469,9 +473,9 @@ hr {
 	text-shadow: none;
 	color: #e25440;
 	-webkit-font-smoothing: antialiased; }
-	.btn:hover, .navigation__item a:hover {
+	/* .btn:hover, .navigation__item a:hover {
 		color: #b9301c;
-		border-color: #b9301c; }
+		border-color: #b9301c; } */
 
 .btn-secondary {
 	border-color: #5ba4e5;
@@ -513,7 +517,7 @@ hr {
 	position: relative;
 	top: 3px;
 	font-size: 36px;
-	color: #FFF; }
+	color: #eeeeee; }
 
 nav {
 	display: inline-block;
@@ -534,12 +538,13 @@ nav {
 	.navigation__item a {
 		display: block;
 		position: relative;
-		border-color: #FFF;
-		color: #FFF;
+		border-color: #eeeeee;
+		color: #eeeeee;
 		opacity: .8; }
 		.navigation__item a:hover {
-			color: #FFF;
-			border-color: #FFF;
+			color: #2d2d2d;
+			background-color: #ffffff;
+			border-color: #0a0a0a;
 			opacity: 1; }
 
 .navigation--social {
@@ -803,9 +808,6 @@ input[type="tel"] {
 		background: rgba(51, 51, 51, 0.98);
 		border-bottom: 1px solid rgba(255, 255, 255, 0.15); }
 		.navigation-wrapper.visible {
-			display: grid; /* CHANGE disp:block to GRID */
-			grid-template-columns: auto;
-			grid-template-rows: 1fr 2fr 1fr;
 			align-items: center;
 		}
 
